# SOFT-VO

./: .gitignore  CMakeLists.txt  README.md  config_kitti00.yaml
HistoryFiles/: feature.Old  matching.Old
include/: common_include.h  config.h  feature.h  feature_selection.h  matching.h  soft_slam_io.h
src/: feature.cpp  feature_selection.cpp  matching.cpp  soft_slam_io.cpp
tests/: CMakeLists.txt  camera_test.cpp  config_test.cpp  feature_test.cpp  io_test.cpp  main.cpp  main_optical.cpp  match_test.cpp  stan_derive_main.cpp  visual_odometry_test.cpp
